--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="logo-blue"><a href="/"><img src="images/header-logo-blue.svg" alt="リゾーツ琉球株式会社"></a></h1>
         <nav>
             <ul>
-                <li><a href="/">
+                <li><a href="index.html">
                         ホーム
                     </a></li>
                 <li><a href="news.html">
