トップページへのリンクを変更

--- a/works.html
+++ b/works.html
@@ -24,11 +24,11 @@
 
 <body id="works">
   <header data-scroll-on="100" data-playback>
-    <h1><a href="/"><img src="images/header-logo.svg" alt="リゾーツ琉球株式会社"></a></h1>
+    <h1><a href="index.html"><img src="images/header-logo.svg" alt="リゾーツ琉球株式会社"></a></h1>
     <h1 class="logo-blue"><a href="/"><img src="images/header-logo-blue.svg" alt="リゾーツ琉球株式会社"></a></h1>
     <nav>
       <ul>
-        <li><a href="/">
+        <li><a href="index.html">
             ホーム
           </a></li>
         <li><a href="news.html">
@@ -254,7 +254,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/">ホーム</a></li>
+          <li><a href="index.html">ホーム</a></li>
           <li><a href="news.html">ニュース</a></li>
           <li><a href="aboutus.html">企業情報</a></li>
           <li><a href="works.html">施設一覧</a></li>
