--- a/works.html
+++ b/works.html
@@ -70,9 +70,9 @@
           <a href="#">
             <div class="sample1">
               <figure><img src="images/senagajimahotel@2x.jpg" alt="瀬長島ホテル"></figure>
-              <div class="mask">
+              <!-- <div class="mask">
                 <div class="caption">公式予約サイトへ</div>
-              </div>
+              </div> -->
             </div>
             <div class="work-text">
               <div class="work-category">ホテル</div>
